<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_700"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="end">


        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:contentDescription="Menu"
            android:onClick="showPopupMenu"
            android:src="@drawable/baseline_density_medium_24" />

    </LinearLayout>



    <!-- Filter section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Add your filter components here (e.g., dropdowns, checkboxes, etc.) -->
        <!-- Example filter components -->
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/categories"
            android:popupBackground="@color/textcolor"
            android:minHeight="48dp"
            android:prompt="@string/select_category" />

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/locations"
            android:popupBackground="@color/textcolor"
            android:minHeight="48dp"
            android:prompt="@string/select_location" />

        <Button
            android:id="@+id/btn_apply_filters"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:text="@string/apply_filters" />
    </LinearLayout>

    <!-- Search section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top"
        android:orientation="horizontal"
        android:padding="16dp">


        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:hint="@string/search_ads"
            android:inputType="text"
            android:maxWidth="400dp"
            android:minHeight="48dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:text="@string/search" />
    </LinearLayout>

    <!-- Ads list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_ads"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_weight="1" />

</LinearLayout>